[gd_scene load_steps=3 format=3 uid="uid://dllg7m8c3b27q"]

[ext_resource type="Theme" uid="uid://8v8xgpdy1iuh" path="res://assets/themes/menu_theme.tres" id="1_xqga4"]
[ext_resource type="Script" uid="uid://evyuw34ycd4y" path="res://scripts/menus/main_menu.gd" id="2_ovrgc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xqga4")
script = ExtResource("2_ovrgc")

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -15.5
offset_right = 46.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="NewGame" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Settings" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="HowToPlay" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "How to Play"

[node name="Quit" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Fullscreen" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/VBoxContainer/Fullscreen"]
layout_mode = 2
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="Settings/VBoxContainer/Fullscreen"]
layout_mode = 2

[node name="Back" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="HowToPlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HowToPlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -28.0
offset_right = 64.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HowToPlay/VBoxContainer"]
layout_mode = 2
text = "Welcome to HellCat!

To play the game, click the New Game Button in the Main Menu.
"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="HowToPlay/VBoxContainer"]
layout_mode = 2
text = "Controls:


W, A, S, D - Movement

Shift - Dash toward a given direction

Space - Jump

Click - Shoot toward the Mouse
"

[node name="Back2" type="Button" parent="HowToPlay/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="pressed" from="Main/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="Settings/VBoxContainer/Fullscreen/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Settings/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HowToPlay/VBoxContainer/Back2" to="." method="_on_back_2_pressed"]
